objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>FSP_GP_NPN__c</fullName>
        <formula>if(ispickval(GeneralProducer__c, "Benefit Design Group, LLC"), "16718235", 
if(ispickval(GeneralProducer__c, "Employee Benefits Corporation of America"), "3946269", 
if(ispickval(GeneralProducer__c, "Group Benefit Services"), "2013691", 
if(ispickval(GeneralProducer__c, "Hamilton Insurance Agency"), "963207", 
if(ispickval(GeneralProducer__c, "Insurance Marketing Center, Inc."), "3001309", 
if(ispickval(GeneralProducer__c, "Kelly &amp; Associates Insurance Group"), "2012946", 
if(ispickval(GeneralProducer__c, "BenefitMall"), "3001303", 
if(ispickval(GeneralProducer__c, "CBIZ"), "3204214", 
if(ispickval(GeneralProducer__c, "Potomac Basin Group Assoc., Inc."), "8758656", 
if(ispickval(GeneralProducer__c, "AP Benefit Advisors, LLC"), "17377597", 
if(ispickval(GeneralProducer__c, "NCAS"), "2014638", 
if(ispickval(GeneralProducer__c, "Direct"), "00000", 
if(ispickval(FullServiceProducer__c, "Benefit Design Group, LLC"), "16718235", 
if(ispickval(FullServiceProducer__c, "BenefitMall"), "3001303", 
if(ispickval(FullServiceProducer__c, "AP Benefit Advisors, LLC"), "17377597", 
if(ispickval(FullServiceProducer__c, "Group Benefit Services"), "2013691", 
if(ispickval(FullServiceProducer__c, "Hamilton Insurance Agency"), "963207", 
if(ispickval(FullServiceProducer__c, "Kelly &amp; Associates Insurance Group"), "2012946", 
if(ispickval(FullServiceProducer__c, "NCAS"), "2014638", "00000" 
) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSP/GP NPN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facets_Grp_Num__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A group may have multiple Facets group numbers.</inlineHelpText>
        <label>Facets Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Rate_Increase__c</fullName>
        <inlineHelpText>Final increase, including concessions</inlineHelpText>
        <label>Final Rate Increase %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <inlineHelpText>UW Rec Floor % from Management Report</inlineHelpText>
        <label>Floor %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FullServiceProducer__c</fullName>
        <inlineHelpText>FSP is an agency that bills prem. &amp; remits pd prem. to CF on behalf of grps or members. FSP serves as the prim. contact for compensation &amp; communication on behalf of multi contracted brokers/agencies. FSP is pd fees for services &amp; commissions for brokers</inlineHelpText>
        <label>FullServiceProducer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Design Group, LLC</fullName>
                </value>
                <value>
                    <fullName>BenefitMall</fullName>
                </value>
                <value>
                    <fullName>Crawford Advisors, LLC</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Group Benefit Services</fullName>
                </value>
                <value>
                    <fullName>Hamilton Insurance Agency</fullName>
                </value>
                <value>
                    <fullName>Kelly &amp; Associates Insurance Group</fullName>
                </value>
                <value>
                    <fullName>NCAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gain_Loss__c</fullName>
        <inlineHelpText>Overall Gain/Loss from Management Report</inlineHelpText>
        <label>Gain/Loss $</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GeneralProducer__c</fullName>
        <inlineHelpText>A GP is an agency that acts as the prim.contact and recipient of compensation and comm. on behalf of mult. brokers and/or agencies that are contracted. GPs are pd fees for their admin. services and commissions for sales made by the brokers they administer</inlineHelpText>
        <label>GeneralProducer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Design Group, LLC</fullName>
                </value>
                <value>
                    <fullName>BenefitMall</fullName>
                </value>
                <value>
                    <fullName>CBIZ</fullName>
                </value>
                <value>
                    <fullName>Crawford Advisors, LLC</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Employee Benefits Corporation of America</fullName>
                </value>
                <value>
                    <fullName>Group Benefit Services</fullName>
                </value>
                <value>
                    <fullName>Hamilton Insurance Agency</fullName>
                </value>
                <value>
                    <fullName>Insurance Marketing Center, Inc.</fullName>
                </value>
                <value>
                    <fullName>Kelly &amp; Associates Insurance Group</fullName>
                </value>
                <value>
                    <fullName>NCAS</fullName>
                </value>
                <value>
                    <fullName>Potomac Basin Group Assoc., Inc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HB_Offered__c</fullName>
        <formula>IF(INCLUDES(Products_Offered__c, "HealthyBlue"), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HB_Offered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HB_Sold__c</fullName>
        <formula>IF(INCLUDES(Products_Sold__c, "HealthyBlue"), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HB_Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Headquarters_Address__c</fullName>
        <formula>Account.BillingStreet + " " + Account.BillingCity + " " + Account.BillingCountry + " " + Account.BillingState + " " + Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Headquarters Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Successor__c</fullName>
        <inlineHelpText>Track the Incumbent/Successor for both Medical and Dental on all opportunities marked Sold or Dead. For Sold opportunities, Incumbent refers to 'who had business prior'. For Dead opportunities, Successor refers to 'who did Carefirst lose to'</inlineHelpText>
        <label>Incumbent / Successor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACO</fullName>
                </value>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Ameritas</fullName>
                </value>
                <value>
                    <fullName>CareFirst</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Delta</fullName>
                </value>
                <value>
                    <fullName>Dentaquest</fullName>
                </value>
                <value>
                    <fullName>Dominion</fullName>
                </value>
                <value>
                    <fullName>EverGreen</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Humana</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>Metlife</fullName>
                </value>
                <value>
                    <fullName>None (Out of Business)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>TPA: Allegiance (Cigna)</fullName>
                </value>
                <value>
                    <fullName>TPA: Code Structure</fullName>
                </value>
                <value>
                    <fullName>TPA: GBS</fullName>
                </value>
                <value>
                    <fullName>TPA: Loomis</fullName>
                </value>
                <value>
                    <fullName>TPA: Meritain Health (Aetna)</fullName>
                </value>
                <value>
                    <fullName>TPA: UMR (UHC)</fullName>
                </value>
                <value>
                    <fullName>UHC</fullName>
                </value>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>United Concordia</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jeopardy_Issues__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Why is this Opportunity in Jeopardy?</inlineHelpText>
        <label>Jeopardy Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_User__c</fullName>
        <description>Used in order to Keep the SFDC LastModifiedBy data available because when batch processes execute SFDC LastModifiedBy field data is overwritten.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Modified By User</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rep_Name_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This look-up will be based off of the Lead Rep Name on the user record to be displayed on the Opportunity object.</description>
        <inlineHelpText>This look-up will be based off of the Lead Rep Name on the user record to be displayed on the Opportunity object.</inlineHelpText>
        <label>Lead Rep Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Lead_Rep__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Rep_Name__c</fullName>
        <label>Lead Rep Name(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adrienne Robinson</fullName>
                </value>
                <value>
                    <fullName>Allen Maier</fullName>
                </value>
                <value>
                    <fullName>Amie Grabarek</fullName>
                </value>
                <value>
                    <fullName>Anne Savoca</fullName>
                </value>
                <value>
                    <fullName>Ann Pederson</fullName>
                </value>
                <value>
                    <fullName>Barbara Gerber</fullName>
                </value>
                <value>
                    <fullName>Barbara Jordan</fullName>
                </value>
                <value>
                    <fullName>Barb Patton</fullName>
                </value>
                <value>
                    <fullName>Barry Walton</fullName>
                </value>
                <value>
                    <fullName>Brad Warren</fullName>
                </value>
                <value>
                    <fullName>Brian Gunning</fullName>
                </value>
                <value>
                    <fullName>Carolyn Drumgoole</fullName>
                </value>
                <value>
                    <fullName>Carolyn Rand</fullName>
                </value>
                <value>
                    <fullName>Charlene Rutkowski</fullName>
                </value>
                <value>
                    <fullName>Charlie Albert</fullName>
                </value>
                <value>
                    <fullName>Christopher Stolze</fullName>
                </value>
                <value>
                    <fullName>Chuck Housman</fullName>
                </value>
                <value>
                    <fullName>Cindy Horn</fullName>
                </value>
                <value>
                    <fullName>Dave Tartaglia</fullName>
                </value>
                <value>
                    <fullName>Dave Thomas</fullName>
                </value>
                <value>
                    <fullName>Denise Dunn</fullName>
                </value>
                <value>
                    <fullName>Denise Mosco</fullName>
                </value>
                <value>
                    <fullName>DIane Freeland</fullName>
                </value>
                <value>
                    <fullName>Donna Arbogast</fullName>
                </value>
                <value>
                    <fullName>Donna Hase</fullName>
                </value>
                <value>
                    <fullName>Doreen Murphy</fullName>
                </value>
                <value>
                    <fullName>Evelyn Bradshaw</fullName>
                </value>
                <value>
                    <fullName>Gail Deorio</fullName>
                </value>
                <value>
                    <fullName>Georgia Greenwell</fullName>
                </value>
                <value>
                    <fullName>Ginger Krempa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Rep_Number_Drawloop__c</fullName>
        <formula>AIA_Lead_Rep_Name__r.Lead_Rep_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Rep Number Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rep_Number_User__c</fullName>
        <description>The Lead Rep Number populates from the Lead Rep Name</description>
        <formula>Lead_Rep_Name_User__r.Lead_Rep_Number__c</formula>
        <inlineHelpText>The Lead Rep Number populates from the Lead Rep Name</inlineHelpText>
        <label>Lead Rep Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rep_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Rep #(s)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rep_Phone_Drawloop__c</fullName>
        <description>This is used for drawloop</description>
        <formula>AIA_Lead_Rep_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Rep Phone Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rep__c</fullName>
        <label>Lead Rep#</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Rep_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0007</fullName>
                </value>
                <value>
                    <fullName>0111</fullName>
                </value>
                <value>
                    <fullName>0151</fullName>
                </value>
                <value>
                    <fullName>0184</fullName>
                </value>
                <value>
                    <fullName>0189</fullName>
                </value>
                <value>
                    <fullName>0341</fullName>
                </value>
                <value>
                    <fullName>0355</fullName>
                </value>
                <value>
                    <fullName>0858</fullName>
                </value>
                <value>
                    <fullName>1002</fullName>
                </value>
                <value>
                    <fullName>1033</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>1296</fullName>
                </value>
                <value>
                    <fullName>1334</fullName>
                </value>
                <value>
                    <fullName>1371</fullName>
                </value>
                <value>
                    <fullName>1680</fullName>
                </value>
                <value>
                    <fullName>1855</fullName>
                </value>
                <value>
                    <fullName>1870</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2058</fullName>
                </value>
                <value>
                    <fullName>2185</fullName>
                </value>
                <value>
                    <fullName>2535</fullName>
                </value>
                <value>
                    <fullName>3025</fullName>
                </value>
                <value>
                    <fullName>3029</fullName>
                </value>
                <value>
                    <fullName>3186</fullName>
                </value>
                <value>
                    <fullName>3679</fullName>
                </value>
                <value>
                    <fullName>3829</fullName>
                </value>
                <value>
                    <fullName>3830</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Account_Name_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Account Name Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Entity</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Ratio_Year_1__c</fullName>
        <inlineHelpText>Loss Ratio Yr1 from Management Report</inlineHelpText>
        <label>Loss Ratio-- Year 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loss_Ratio_Year_2__c</fullName>
        <inlineHelpText>Loss Ratio Yr2 from Management Report</inlineHelpText>
        <label>Loss Ratio-- Year 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loss_Ratio_Year_3__c</fullName>
        <inlineHelpText>Loss Ratio Yr3 from Management Report</inlineHelpText>
        <label>Loss Ratio-- Year 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Luminex__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the Luminex Account number</inlineHelpText>
        <label>LuminX Group ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_DC_DE_Underwriter_Comments__c</fullName>
        <description>This field is for communication between U/W and Sales and should not be used for reporting purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MD/DC Underwriter Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_Segment_New__c</fullName>
        <description>This field is replacing the old Market_Segment__c field.  The old field label was changed to Market Segment History</description>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2-50</fullName>
                </value>
                <value>
                    <fullName>51-199</fullName>
                </value>
                <value>
                    <fullName>200-999</fullName>
                </value>
                <value>
                    <fullName>1000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>This field was deprecated during the Sales reorg effort.  Became live on 1/1/2013.
Market_Segment__c replaced by Market_Segment_New__c</description>
        <inlineHelpText>OBSOLETE: This field is superseded by a new field called Market Segment.</inlineHelpText>
        <label>Market Segment (Obsolete)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-50</fullName>
                </value>
                <value>
                    <fullName>51-199</fullName>
                </value>
                <value>
                    <fullName>200+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MissingPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in conjunction with Apex code class MissingOpportunityPartnersCheck.  This field should never be editable by the users.</description>
        <label>Missing Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NASCO_Acct_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Must be 5 digits and may contain no more than 4 Account numbers</inlineHelpText>
        <label>NASCO Acct. #</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCAS_Declined_Reason__c</fullName>
        <label>NCAS Declined Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does Not Meet 50% Employer Contribution</fullName>
                </value>
                <value>
                    <fullName>Does Not Meet 75% Participation</fullName>
                </value>
                <value>
                    <fullName>Not Competitive</fullName>
                </value>
                <value>
                    <fullName>Three Carriers In 5 Years</fullName>
                </value>
                <value>
                    <fullName>Not In Service Area</fullName>
                </value>
                <value>
                    <fullName>More than 10% Health Risk Load</fullName>
                </value>
                <value>
                    <fullName>Never Received Requested Information</fullName>
                </value>
                <value>
                    <fullName>Poor Risk</fullName>
                </value>
                <value>
                    <fullName>Poor Experience</fullName>
                </value>
                <value>
                    <fullName>Claims Experience Not Available</fullName>
                </value>
                <value>
                    <fullName>High Demographic Factor</fullName>
                </value>
                <value>
                    <fullName>High Loss Ratio</fullName>
                </value>
                <value>
                    <fullName>Substandard Population</fullName>
                </value>
                <value>
                    <fullName>Former CareFirst Group</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Not Licensed to Sell In Area</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCAS_Underwriter_Comments__c</fullName>
        <description>This field is for communication between U/W and Sales and should not be used for reporting purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NCAS Underwriter Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NCAS_Underwriter__c</fullName>
        <label>NCAS Underwriter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brandi Wiggins</fullName>
                </value>
                <value>
                    <fullName>Bruno</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>James</fullName>
                </value>
                <value>
                    <fullName>Monika Chandra</fullName>
                </value>
                <value>
                    <fullName>Sara Young</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Unterborn</fullName>
                </value>
                <value>
                    <fullName>Young</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCAS_Underwriting_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NCAS Underwriting Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NCAS_Underwriting_Status__c</fullName>
        <label>NCAS Underwriting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Declined to Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Alliance_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Must contain all digits and a length of 5</inlineHelpText>
        <label>National Alliance ID</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Lease_Group_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the Network Leasing Account Number</inlineHelpText>
        <label>Net. Lease Group ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Cycle_Term_Date__c</fullName>
        <description>This field is used to only when the opportunity termed prior to the effective date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Off Cycle Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Sold_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Sold Carrier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Loss_as_a_of_Revenue__c</fullName>
        <inlineHelpText>Overall GL as Percent of Revenue from Management Report</inlineHelpText>
        <label>Overall Loss as a % of Revenue</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Variance__c</fullName>
        <formula>IF(Carefirsts_Annual_Premium__c&gt;0&amp;&amp;Competitors_Annual_Premium__c&gt;0,(1- (Competitors_Annual_Premium__c / Carefirsts_Annual_Premium__c)),NULL)</formula>
        <label>Percentage Variance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Year_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Year Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pooled_Amount__c</fullName>
        <inlineHelpText>Claims Over Pooling from Management Report</inlineHelpText>
        <label>Pooled Amount $</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Contracts__c</fullName>
        <label>Potential Contracts</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Contracts_new__c</fullName>
        <description>Returns the Potential contracts (old) value when the opportunity created date &lt; migration date (05/08/2013, 9 pm)
Returns the Estimated Actuals value when the opportunity created date &gt;= migration date (05/08/2013, 9 pm)</description>
        <formula>IF(
       (CreatedDate &lt;  DATETIMEVALUE("2013-05-08 21:00:00")),  Potential_Contracts__c ,   Estimated_Actuals__c )</formula>
        <label>Potential Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_RFP_Receipt_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Potential RFP Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Role__c</fullName>
        <label>Primary Contact Role</label>
        <summaryFilterItems>
            <field>Opportunity_Contact_Role__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Contact_Role__c.Role__c</field>
            <operation>equals</operation>
            <value>Primary Broker</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Contact_Role__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_FSP_GP__c</fullName>
        <label>Primary FSP GP</label>
        <summaryFilterItems>
            <field>FSP_GP__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FSP_GP__c.FSP_GP__c</field>
            <operation>equals</operation>
            <value>FSP, GP</value>
        </summaryFilterItems>
        <summaryForeignKey>FSP_GP__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Partner__c</fullName>
        <label>Primary Partner</label>
        <summaryFilterItems>
            <field>Partner__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Partner__c.Role__c</field>
            <operation>equals</operation>
            <value>Broker</value>
        </summaryFilterItems>
        <summaryForeignKey>Partner__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Probability_Custom__c</fullName>
        <label>Probability(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Products_Marked_Sold__c</fullName>
        <description>This field is used to allow the ability to detect if products are marked sold at the opportunity product level.  Two VR's are using this field: E018 and E019 on the opportunity object.</description>
        <label>Products Marked Sold</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Sold__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>